# devops

./: .gitignore  .gitmodules  README.md
.github/workflows/: terraform.yml  (+1 more)
cloundfront-docs/: README.md
cloundfront_ec2/: cloudfront.tf  data.tf  domain.tf  ec2.tf  locals.tf  outputs.tf  variables.tf
instances/: main.tf  variables.tf
sites/: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
sites/flask_app/: Dockerfile  pyproject.toml
sites/flask_app/app/: __init__.py  config.py  extensions.py  main.py
sites/flask_app/app/forms/: __init__.py
sites/flask_app/app/models/: __init__.py
sites/flask_app/app/routes/: __init__.py  auth_routes.py  dashboard.py  dns_routes.py  docker_routes.py  etcd_routes.py  main_routes.py
sites/flask_app/app/services/: auth.py  etcd_client.py  route53.py
sites/flask_app/app/templates/: base.html  complete.html  containers.html  etcd.html  index.html  login.html  records.html  zones.html
sites/flask_app/app/templates/auth/: base.html  footer.html  navbar.html
sites/flask_app/app/templates/auth/crud/: base.html
sites/flask_app/app/templates/dashboard/: domain_detail.html  index.html  site_detail.html
sites/flask_app/app/templates/sites/: detail.html
sites/flask_app/app/templates/sites/zones/: list.html
sites/flask_app/migrations/versions/: 0b14dc411037_add_hosted_zone_id_to_bidirectional_.py  58141824e588_add_first_structure_to_site_and_domains.py  774eccbc9ad7_add_external_id_column_to_domain.py  a311a5120975_add_domain_table.py  f08ac88e9041_add_has_manage_dns_field_to_domain.py
(+59 files in other folders)
