[tool.poetry]
name = "sites-app"
version = "0.0.1"
description = ""
authors = ["Igor Santos <igr.exe@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
boto3 = "^1.35.30"
docker = "^7.1.0"
python-dotenv = "^1.0.1"
etcd3 = "^0.12.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
flask-wtf = "^1.2.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.28.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
